# fastapi_lessons

./: .gitignore  db.sqlite3  items_views.py  main.py  pyproject.toml
Users/: crud.py  schemas.py  views.py
alembic/: env.py
alembic/versions/: 2025_04_07_1638-86743dfdb0a3_create_products_table.py  2025_04_07_1649-fa2876578381_create_users_table.py  2025_04_07_1658-5d31dab97412_create_posts_table.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  post.py  user.py
