[project]
name = "Microshop"
version = "0.1.0"
description = "'Проект онлайн магазина'"
authors = [
    {name = "Borisov Aleksandr",email = "aleksborisov107@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "uvicorn[standart] (>=0.34.0,<0.35.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "sqlalchemy[asynciao] (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "black (>=25.1.0,<26.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
